# logiq

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: RESULTS.md  __init__.py  regress.py  run.py
logiq/: __init__.py  api.py  cli.py  ingest.py  models.py  partition.py  store.py  wal.py
tests/: conftest.py  test_api.py  test_cli.py  test_contracts.py  test_crash_recovery.py  test_ingest.py  test_pruning.py  test_query.py  test_recovery.py
